--- a/cll2ev1-gdx/android/res/values/strings.xml
+++ b/cll2ev1-gdx/android/res/values/strings.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
-
-    <string name="app_name">cll2ev1-gdx</string>
-
+    <string name="app_name">CLL2EV1</string>
 </resources>
