--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,11 @@
-1.0
+1.08
+
+Bug fix with challenges getting stuck into "next session" mode.
+
+1.07 - 1.01
+
+Adding challenges.
+
+1.00
 
 Initial version.
