--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,7 @@
+1.09
+
+Try and fix issue with cards getting "lost" between sessions.
+
 1.08
 
 Bug fix with challenges getting stuck into "next session" mode.
