--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.15 - Fix wrong audio file for Ꮎ ᎠᎨᏯ ᎤᎿ. Add picture blacklist entries to several challenges.
 1.14 - It's getting too large too fast. Use PNGCRUSH on pictures. Reduce audio from 192 bits to 128 bits.
 1.13 - Fix issue with wrong cards vs correct cards and Chapter 8's variations for ᎥᏍᎩᎾ vs ᎾᏍᎩ
 1.12 - Added selected entries from Chapter 8 exercises. Fixed ᏘᎪᎵᏯ vs ᏙᏪᎸᎦ mixup. Now have 200 challenges.
