--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.19 - Audio filename fix.
 1.18 - Chapter 9 - Core Vocabulary
 1.17 - Adjust chapter 5 artwork.
 1.16 - Ꮎ ᎠᎨᏯ ᎤᎿ should only show one woman on far shore.
