--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.26 - Chapter 10 core vocabulary part 1. Now have 258 challenges.
 1.25 - Various Chapter 8 picture adjustments.
 1.24 - Fix incorrect ᏲᏁᎦᎾ picture. Switch to using mp3gain instead of normalize-mp3 for automatic audio volume adjustment.
 1.23 - Chapter 9 - Additional vocabulary - Now have 238 challenges.
