--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.31 - Speed up session load when there are > 200 challenges saved as part of session.
 1.30 - Chapter 12 pt 1 of 3. Now have 344 challenges. Misc other audio fixes.
 1.29 - Audio fix. (ᏃᏘ -> ᎧᏂᎩᏓ). Blacklist fixes.
 1.28 - Chapter 11 vocabulary. Now have 337 challenges.
