--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.34 - Fix duplicate card ids FUBAR for ᏂᎯ ᎠᎴ ᎠᏴ. Add code to log and discard any future duplicate ids. Now have 371 challenges.
 1.33 - Debug logging for when a card's stats no longer match any existing cards.
 1.32 - Chapter 12 parts 2 and 3 of 3. Now have 375 challenges.
 1.31 - Speed up session load when there are > 200 challenges saved as part of session.
