--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.42 - Picture and audio fixes.
 1.41 - Chapter 16 - Basic sentence forms practice. Now have 466 challenges! 
 1.40 - Blacklist certain color combinations.
 1.39 - Switch back to 45 DPI. 35 DPI is too low of a resolution to be very useful.
