--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.46 - Fix for older Androids. (Removed references to "StandardCharsets").
 1.45 - Picture adjustments.
 1.44 - Chapter 18. Now have 512 challenges!
 1.43 - Chapter 17 core vocabulary. Now have 474 challenges!
