--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,4 +1,4 @@
-1.54 - 
+1.54 - 653 challenges. Chapter 22.
 1.53 - 647 challenges. Chapter 21.
 1.52 - 625 challenges. Added remainder of Chapter 20 challenges.
 1.51 - 606 challenges. Added: Ꮭ ᏱᎩ, Ᏹ ᏱᎨᏐᎢ, Ꮭ ᏱᎨᏒᎩ, Ꮭ ᏱᎨᏎᎢ, Ꮭ ᏱᎨᎲᎩ, Ꮭ ᏱᎨᎮᎢ, Ꮭ ᏱᎨᏎᏍᏗ.
