--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,4 +1,4 @@
-1.60 - 
+1.60 - Add English gloss to new card display. Add [?] during play to show answer.
 1.59 - ᎠᏉᏗᎨᎢ audio re-record.
 1.58 - 676 challenges. Add core forms practice for Chapter 17.
 1.57 - Various picture adjustments for Chapter 18.
