--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,4 +1,4 @@
-1.62 -
+1.62 - Add missing "maybe" forms for Chapter 20. Now have 681 challenges.
 1.61 - Add new indicator for % how many cards are in play. Add "practice again" time indicator.
 1.60 - Add English gloss to new card display. Add [?] during play to show answer.
 1.59 - ᎠᏉᏗᎨᎢ audio re-record.
