--- a/cll2ev1-gdx/android/assets/text/changelog.txt
+++ b/cll2ev1-gdx/android/assets/text/changelog.txt
@@ -1,3 +1,4 @@
+1.64 - Fix incorrect English gloss for ᎯᏴᏫ.
 1.63 - Fix incorrect ᏱᏗᏣᎭ. (Ꮥ vs Ꮧ after Ᏹ).
 1.62 - Add missing "maybe" forms for Chapter 20. Now have 681 challenges.
 1.61 - Add new indicator for % how many cards are in play. Add "practice again" time indicator.
