--- a/cll1-gdx/android/assets/text/changelog.txt
+++ b/cll1-gdx/android/assets/text/changelog.txt
@@ -1,4 +1,4 @@
-1.67 - Chapter Indicator, Card Id, Reduce font size for Syllabary (has issue with certain layouts)
+1.67 - Chapter Indicator, Auto reduce font size for Syllabary (has issue with certain tablet sizes)
 1.66 - Fix app name and app icon.
 1.65 - Vocabulary fixes for ᎤᏩᎧᎭ forms.
 1.64 - Fix incorrect English gloss for ᎯᏴᏫ.
